@startuml
class Area
class Audio
class AudioManager
class Client
class ClientMapLoader
class CommandExecuter
class CommandSender
class Door
class DoorTile
class DoorTimer
class Drawable
class Hud
class Log
class Player
class Raycaster
class RaycastedAnimation
class ScoreBoard
class SdlAnimation
class SdlTexture
class SdlWindow
class TextureManager

class Map
class Socket
class Thread

AudioManager --> Audio

Client --> Log
Client --> CommandExecuter
Client --> CommandSender
Client --> TextureManager
Client --> AudioManager
Client --> ScoreBoard
Client --> ClientMapLoader
Client --> Hud
Client --> Player
Client --> Raycaster

CommandExecuter --> Map
CommandExecuter --> Socket
CommandExecuter --> RaycastedAnimation
CommandExecuter --> AudioManager
CommandExecuter --> TextureManager
CommandExecuter --> ScoreBoard
CommandExecuter --> ClientMapLoader
CommandExecuter --> Player
CommandExecuter --|> Thread

CommandSender --> ScoreBoard
CommandSender --> Socket
CommandSender --|> Thread

Door --> Area
Door --> TextureManager
Door --|> Drawable

DoorTimer --|> Thread
DoorTimer --> Map

Drawable --> TextureManager

Map --> DoorTile
Map --> DoorTimer

Hud --> Area 
Hud --> Player
Hud --> SdlAnimation
Hud --> Player
Hud --> TextureManager
Hud --> AudioManager

Player --|> Drawable

RaycastedAnimation --> Area
RaycastedAnimation --> TextureManager
RaycastedAnimation --|> Drawable

Raycaster --> Door
Raycaster --> DoorTimer
Raycaster --> Drawable
Raycaster --> Map
Raycaster --> Hud
Raycaster --> Player
Raycaster --> TextureManager

ScoreBoard --> TextureManager

SdlAnimation --> Area
SdlAnimation --> TextureManager
SdlAnimation --|> Drawable

SdlWindow --> SdlTexture 
SdlWindow --> Area

TextureManager --> Area
TextureManager --> SdlTexture
TextureManager --> SdlWindow
@enduml@startuml
class Area
class Audio
class AudioManager
class Client
class ClientMapLoader
class CommandExecuter
class CommandSender
class Door
class DoorTile
class DoorTimer
class Drawable
class Hud
class Log
class Player
class Raycaster
class RaycastedAnimation
class ScoreBoard
class SdlAnimation
class SdlTexture
class SdlWindow
class TextureManager

class Map
class Socket
class Thread

AudioManager --> Audio

Client --> Log
Client --> CommandExecuter
Client --> CommandSender
Client --> TextureManager
Client --> AudioManager
Client --> ScoreBoard
Client --> ClientMapLoader
Client --> Hud
Client --> Player
Client --> Raycaster

CommandExecuter --> Map
CommandExecuter --> Socket
CommandExecuter --> RaycastedAnimation
CommandExecuter --> AudioManager
CommandExecuter --> TextureManager
CommandExecuter --> ScoreBoard
CommandExecuter --> ClientMapLoader
CommandExecuter --> Player
CommandExecuter --|> Thread

CommandSender --> ScoreBoard
CommandSender --> Socket
CommandSender --|> Thread

Door --> Area
Door --> TextureManager
Door --|> Drawable

DoorTimer --|> Thread
DoorTimer --> Map

Drawable --> TextureManager

Map --> DoorTile
Map --> DoorTimer

Hud --> Area 
Hud --> Player
Hud --> SdlAnimation
Hud --> Player
Hud --> TextureManager
Hud --> AudioManager

Player --|> Drawable

RaycastedAnimation --> Area
RaycastedAnimation --> TextureManager
RaycastedAnimation --|> Drawable

Raycaster --> Door
Raycaster --> DoorTimer
Raycaster --> Drawable
Raycaster --> Map
Raycaster --> Hud
Raycaster --> Player
Raycaster --> TextureManager

ScoreBoard --> TextureManager

SdlAnimation --> Area
SdlAnimation --> TextureManager
SdlAnimation --|> Drawable

SdlWindow --> SdlTexture 
SdlWindow --> Area

TextureManager --> Area
TextureManager --> SdlTexture
TextureManager --> SdlWindow
@enduml